<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Menu">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/textblue">

        <TextView
            android:id="@+id/nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/abeezee"
            android:text="RUMAH SAKIT"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="13dp"
            android:onClick="BackToMenu"
            app:srcCompat="@drawable/ic_back" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:id="@+id/scroll_view_hospitals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_layout_hospitals">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/card_view_rshs"
                    android:layout_width="match_parent"
                    android:layout_height="360dp"
                    android:layout_margin="8dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="360dp">

                        <ImageView
                            android:id="@+id/thumbnail"
                            android:layout_width="match_parent"
                            android:layout_height="250dp"
                            android:layout_alignParentTop="true"
                            android:scaleType="centerCrop"
                            android:src="@drawable/img_rshs" />

                        <TextView
                            android:id="@+id/title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/thumbnail"
                            android:layout_centerHorizontal="true"
                            android:fontFamily="@font/abeezee"
                            android:maxLines="3"
                            android:padding="8dp"
                            android:text="@string/hospital_name1"
                            android:textColor="#222"
                            android:textSize="22dp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/title"
                            android:fontFamily="@font/abeezee"
                            android:maxLines="3"
                            android:padding="8dp"
                            android:text="@string/hospital_description1"
                            android:textColor="#666"
                            android:textSize="16dp" />

                        <com.beardedhen.androidbootstrap.BootstrapButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentEnd="true"
                            android:layout_marginBottom="119dp"
                            android:layout_marginEnd="13dp"
                            android:fontFamily="@font/abeezee"
                            android:text="Detail"
                            app:bootstrapBrand="success"
                            app:bootstrapSize="lg"
                            app:buttonMode="regular"
                            app:roundedCorners="true"
                            app:showOutline="false" />
                    </RelativeLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/card_view_avisena"
                    android:layout_width="match_parent"
                    android:layout_height="360dp"
                    android:layout_margin="8dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="360dp">

                        <ImageView
                            android:id="@+id/thumbnail"
                            android:layout_width="match_parent"
                            android:layout_height="250dp"
                            android:layout_alignParentTop="true"
                            android:scaleType="centerCrop"
                            android:src="@drawable/img_avisena" />

                        <TextView
                            android:id="@+id/title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/thumbnail"
                            android:layout_centerHorizontal="true"
                            android:fontFamily="@font/abeezee"
                            android:maxLines="3"
                            android:padding="8dp"
                            android:text="@string/hospital_name2"
                            android:textColor="#222"
                            android:textSize="22dp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/title"
                            android:fontFamily="@font/abeezee"
                            android:maxLines="3"
                            android:padding="8dp"
                            android:text="@string/hospital_description2"
                            android:textColor="#666"
                            android:textSize="16dp" />

                        <com.beardedhen.androidbootstrap.BootstrapButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentEnd="true"
                            android:layout_marginBottom="119dp"
                            android:layout_marginEnd="13dp"
                            android:fontFamily="@font/abeezee"
                            android:text="Detail"
                            app:bootstrapBrand="success"
                            app:bootstrapSize="lg"
                            app:buttonMode="regular"
                            app:roundedCorners="true"
                            app:showOutline="false" />

                    </RelativeLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/card_view_handayani"
                    android:layout_width="match_parent"
                    android:layout_height="360dp"
                    android:layout_margin="8dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="360dp">

                        <ImageView
                            android:id="@+id/thumbnail"
                            android:layout_width="match_parent"
                            android:layout_height="250dp"
                            android:layout_alignParentTop="true"
                            android:scaleType="centerCrop"
                            android:src="@drawable/img_handayani" />

                        <TextView
                            android:id="@+id/title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/thumbnail"
                            android:layout_centerHorizontal="true"
                            android:fontFamily="@font/abeezee"
                            android:maxLines="3"
                            android:padding="8dp"
                            android:text="@string/hospital_name3"
                            android:textColor="#222"
                            android:textSize="22dp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/title"
                            android:fontFamily="@font/abeezee"
                            android:maxLines="3"
                            android:padding="8dp"
                            android:text="@string/hospital_description3"
                            android:textColor="#666"
                            android:textSize="16dp" />

                        <com.beardedhen.androidbootstrap.BootstrapButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentEnd="true"
                            android:layout_marginBottom="119dp"
                            android:layout_marginEnd="13dp"
                            android:fontFamily="@font/abeezee"
                            android:text="Detail"
                            app:bootstrapBrand="success"
                            app:bootstrapSize="lg"
                            app:buttonMode="regular"
                            app:roundedCorners="true"
                            app:showOutline="false" />

                    </RelativeLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="15dp"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="4">

                <LinearLayout
                    android:id="@+id/card_home"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:src="@drawable/ic_sm_home_30" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Beranda"
                        android:textAlignment="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:src="@drawable/ic_sm_rumah_sakit_30" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Rumah Sakit"
                        android:textAlignment="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:src="@drawable/ic_sm_booking_dokter_30" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Booking"
                        android:textAlignment="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:src="@drawable/ic_sm_info_user_30"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Info"
                        android:textAlignment="center"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</LinearLayout>